--- a/app/cart-page.html
+++ b/app/cart-page.html
@@ -159,18 +159,19 @@
                             <div class="cart-text-wrap">
                               <p class="cart-name">Постельное белье "Two"</p>
                               <div class="cart-price-block clearfix">
-                                <p class="cart-price"> 7 500 р.</p>
-                                 <ul class="counter-list">                
-                                  <li class="counter-item">                                    
-                                    <div class="counter-wrap clearfix">
-                                      <a class="left-btn">-</a>
-                                      <p class="counter">1</p>
-                                      <a class="right-btn">+</a>
-                                    </div>  
-                                  </li>                                  
-                                </ul>
-                                <p class="delete-link">Удалить</p>
+                                <p class="cart-price"> Артикул: 12345</p>                                 
+                                <p class="delete-link">Удалить</p>                                
                               </div>
+                              <div class="counter-list">                
+                                <div class="counter-item">                                    
+                                  <div class="counter-wrap clearfix">
+                                    <a class="left-btn">-</a>
+                                    <p class="counter">1</p>
+                                    <a class="right-btn">+</a>
+                                  </div>  
+                                </div>                                  
+                              </div>
+                              <p class="price-value">7500 p.</p>
                             </div>
                         </li>
                         <li class="cart-item clearfix">
@@ -178,31 +179,52 @@
                           <div class="img-wrap cart-img-wrap">
                             <img src="images/cart-photo.jpg" alt="">                 
                           </div>
-                            <div class="cart-text-wrap">
-                              <p class="cart-name">Постельное белье "Two-Two"</p>
-                              <div class="cart-price-block clearfix">
-                                <p class="cart-price"> 17 500 р.</p>
-                                <p class="delete-link">Удалить</p>
-                              </div>
+                          <div class="cart-text-wrap">
+                            <p class="cart-name">Постельное белье "Two"</p>
+                            <div class="cart-price-block clearfix">
+                              <p class="cart-price"> Артикул: 12345</p>                                 
+                              <p class="delete-link">Удалить</p>                                
                             </div>
+                            <div class="counter-list">                
+                              <div class="counter-item">                                    
+                                <div class="counter-wrap clearfix">
+                                  <a class="left-btn">-</a>
+                                  <p class="counter">1</p>
+                                  <a class="right-btn">+</a>
+                                </div>  
+                              </div>                                  
+                            </div>
+                            <p class="price-value">7500 p.</p>
+                          </div>
                         </li>
-                        <li class="cart-item clearfix">
+                         <li class="cart-item clearfix">
                           <i class="icon icon-cart-close"></i>
                           <div class="img-wrap cart-img-wrap">
                             <img src="images/cart-photo.jpg" alt="">                 
                           </div>
-                            <div class="cart-text-wrap">
-                              <p class="cart-name">Постельное белье "Two-Two"</p>
-                              <div class="cart-price-block clearfix">
-                                <p class="cart-price"> 17 500 р.</p>
-                                <p class="delete-link">Удалить</p>
-                              </div>
+                          <div class="cart-text-wrap">
+                            <p class="cart-name">Постельное белье "Two"</p>
+                            <div class="cart-price-block clearfix">
+                              <p class="cart-price"> Артикул: 12345</p>                                 
+                              <p class="delete-link">Удалить</p>                                
                             </div>
+                            <div class="counter-list">                
+                              <div class="counter-item">                                    
+                                <div class="counter-wrap clearfix">
+                                  <a class="left-btn">-</a>
+                                  <p class="counter">1</p>
+                                  <a class="right-btn">+</a>
+                                </div>  
+                              </div>                                  
+                            </div>
+                            <p class="price-value">7500 p.</p>
+                          </div>
                         </li>
                       </ul>
                     </div>
-                    <div class="cart-footer">
-                      <a href="" class="cart-button">Перейти в корзину</a>
+                    <div class="cart-bottom-block clearfix">
+                      <a href="" class="catalog-button">Оформить заказ</a>
+                      <p class="cart-delete-link">Очистить корзину</p>
                     </div>
                   </div>
                   <!--end-cart-->
