about block add

--- a/app/about.html
+++ b/app/about.html
@@ -311,7 +311,153 @@
           </ul>
         </div>
       </div>
-    </section>    
+    </section>
+    <section class="feedback-block">
+      <div class="container">
+        <div class="row">
+          <div class="content">
+            <h2 class="content-title">Отзывы</h2>
+            <div class="slider-content">
+              <div class="feedback-item">
+                <div class="feedback-left-block">
+                  <div class="img-wrap">
+                    <img src="http://placehold.it/140x140" alt="">
+                  </div>
+                  <p class="user-name">Имя<br>Фамилия</p>
+                  <a href="" class="feedback-link">Ссылка на отзыв</a> 
+                </div>  
+                <div class="feedback-right-block">
+                  <p class="user-name">Имя Фамилия</p>
+                  <div class="feedback-text-wrap">                   
+                      <div class="scrollbar style-3">
+                        <div class="force-overflow">
+                           <p class="feedback-text">                  
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                          </p>
+                        </div>                      
+                      </div>                   
+                  </div>
+                </div>
+              </div>             
+              <div class="feedback-item">
+                <div class="feedback-left-block">
+                  <div class="img-wrap">
+                    <img src="http://placehold.it/140x140" alt="">
+                  </div>
+                  <p class="user-name">Имя<br>Фамилия</p>
+                  <a href="" class="feedback-link">Ссылка на отзыв</a> 
+                </div>  
+                <div class="feedback-right-block">
+                  <p class="user-name">Имя Фамилия</p>
+                  <div class="feedback-text-wrap">                   
+                      <div class="scrollbar style-3">
+                        <div class="force-overflow">
+                           <p class="feedback-text">                  
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. 
+                          </p>
+                        </div>                      
+                      </div>                   
+                  </div>
+                </div>
+              </div>
+              <div class="feedback-item">
+                <div class="feedback-left-block">
+                  <div class="img-wrap">
+                    <img src="http://placehold.it/140x140" alt="">
+                  </div>
+                  <p class="user-name">Имя<br>Фамилия</p>
+                  <a href="" class="feedback-link">Ссылка на отзыв</a> 
+                </div>  
+                <div class="feedback-right-block">
+                  <p class="user-name">Имя Фамилия</p>
+                   <div class="feedback-text-wrap">                   
+                      <div class="scrollbar style-3">
+                        <div class="force-overflow">
+                           <p class="feedback-text">                  
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                          </p>
+                        </div>                      
+                      </div>                   
+                  </div>
+                </div>                
+              </div>
+              <div class="feedback-item">
+                <div class="feedback-left-block">
+                  <div class="img-wrap">
+                    <img src="http://placehold.it/140x140" alt="">
+                  </div>
+                  <p class="user-name">Имя<br>Фамилия</p>
+                  <a href="" class="feedback-link">Ссылка на отзыв</a> 
+                </div>  
+                <div class="feedback-right-block">
+                  <p class="user-name">Имя Фамилия</p>
+                   <div class="feedback-text-wrap">                   
+                      <div class="scrollbar style-3">
+                        <div class="force-overflow">
+                           <p class="feedback-text">                  
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                          </p>
+                        </div>                      
+                      </div>                   
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>     
   </main>
 
   <footer class="footer">
