--- a/app/index.html
+++ b/app/index.html
@@ -240,7 +240,7 @@
       </div>
     </section> 
 
-    <section class="section-4">
+    <section class="feedback-block">
       <div class="container">
         <div class="row">
           <div class="content">
