--- a/app/product.html
+++ b/app/product.html
@@ -182,6 +182,16 @@
               <p class="art">Артикул 17222</p>
               <h3 class="product-title">Леопардовое постельное белье</h3>
               <div class="info-block">
+                <p class="info-title">Категория</p>
+                <ul class="button-list clearfix">
+                  <li class="button-item"><a href="#" class="cathegory-button">Евро</a></li>
+                  <li class="button-item"><a href="#" class="cathegory-button">Полутороспальный</a></li>
+                  <li class="button-item"><a href="#" class="cathegory-button">Двуспальный</a></li>
+                  <li class="button-item"><a href="#" class="cathegory-button">Семейный</a></li>
+                  <li class="button-item"><a href="#" class="cathegory-button">Евромакси</a></li>
+                </ul>
+              </div>
+              <div class="info-block">
                 <p class="info-title">Цвет</p>
                 <p class="info-text">Светло-серый и черный</p>
               </div>
@@ -189,38 +199,9 @@
                 <p class="info-title">Размер</p>
                 <p class="info-text">Наволочки (4шт) 70*70</p>
                 <p class="info-text">Простынь, мм: 230*230</p>
-                <p class="info-text">Пододеяльник, мм: 230*230</p>
-                <p class="info-text">Пододеяльник, мм: 230*230</p>
+                <p class="info-text">Пододеяльник, мм: 230*230</p>                
               </div>
-              <ul class="product-filter-list">
-                <li class="product-filter-item">
-                  <p class="filter-title info-title">Пододеяльник</p>
-                  <select>
-                    <option value="1"><a href="">110*215</a></option>                    
-                    <option value="2"><a href="">110*220</a></option>
-                    <option value="3"><a href="">110*225</a></option>
-                    <option value="4"><a href="">110*230</a></option>                    
-                  </select>
-                </li>
-                <li class="product-filter-item">
-                  <p class="filter-title info-title">Простынь</p>
-                  <select>
-                    <option value="1"><a href="">240*260</a></option>                    
-                    <option value="2"><a href="">110*220</a></option>
-                    <option value="3"><a href="">110*225</a></option>
-                    <option value="4"><a href="">110*230</a></option>                    
-                  </select>
-                </li>
-                <li class="product-filter-item">
-                  <p class="filter-title info-title">Наволочки</p>
-                  <select>
-                    <option value="1"><a href="">70*70</a></option>                    
-                    <option value="2"><a href="">110*220</a></option>
-                    <option value="3"><a href="">110*225</a></option>
-                    <option value="4"><a href="">110*230</a></option>                    
-                  </select>
-                </li>
-              </ul>
+            
               <ul class="counter-list">                
                 <li class="counter-item">
                   <p class="info-title">Количество</p>
