--- a/app/contacts.html
+++ b/app/contacts.html
@@ -159,6 +159,7 @@
               <div class="map-block">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2253.5636733769306!2d37.208457715594704!3d55.60960708051532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b556db6c250621%3A0x3cb3312d72f72022!2z0YPQuy4g0J_Rg9GI0LrQuNC90LAsINCi0L7Qu9GB0YLQvtC_0LDQu9GM0YbQtdCy0L4sINCzLiDQnNC-0YHQutCy0LAsIDE0MzM1MA!5e0!3m2!1suk!2sru!4v1486404351795" height="240" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
+              <a href="" class="title-button title-button-color" data-toggle="modal" data-target="#myModal">Как нас найти</a>
               <p class="contact-text">Телефон: <a href="tel:+7808000000">+7 (808) 00-00-00</a></p>
               <p class="contact-text">Почта: <a href="mailto:mail@mail.ru">mail@mail.ru</a></p>
 
@@ -237,6 +238,27 @@
       </div>
     </div> 
   </footer>
+
+ <!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Название модали</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+        <button type="button" class="btn btn-primary">Сохранить изменения</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
     <!-- build:js scripts/vendor.js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>   
     
