--- a/app/index.html
+++ b/app/index.html
@@ -141,7 +141,7 @@
               </div>
               
               <ul>              
-                <li><a  href="#">Главная</a></li>
+                <li  class="active"><a href="#">Главная</a></li>
                 <li><a href="#">Каталог</a></li>
                 <li><a href="#">Coздать комплект</a></li>
                 <li><a  href="#">Доставка и оплата</a></li>
