--- a/app/contacts.html
+++ b/app/contacts.html
@@ -119,7 +119,7 @@
                 <li><a  href="#">Доставка и оплата</a></li>
                 <li><a  href="#">О нас</a></li>
                 <li><a  href="#">Опт</a></li>
-                <li><a  href="#">Контакты</a></li>
+                <li class="active"><a  href="#">Контакты</a></li>
                 <li><a  href="#">Наши новости</a></li>
                 <li><a  href="#">Instashop</a></li>
               </ul>
