create page dev modal

--- a/app/create.html
+++ b/app/create.html
@@ -144,7 +144,7 @@
 						<div class="tab_container">
 							<h3 class="d_active tab_drawer_heading" rel="tab1">По своим размерам</h3>
 							<div id="tab1" class="tab_content">
-								<a href="" class="create-button">Выберите модель белья</a>
+								<a href="" class="create-button" data-toggle="modal" data-target="#myCreateModal">Выберите модель белья</a>
 									<div class="create-wrap">
 										<ul class="create-list clearfix">
 											<li class="create-item">
@@ -160,9 +160,99 @@
 														<option value="3">150*200</option>
 														<option value="4">100*200</option>                    
 													</select>
+													<p class="create-item-title">Дополнительно</p>
+													<div class="checkbox-blcok">
+														<div class="checkbox-wrap">
+															<input type="checkbox" class="checkbox" checked>
+															<label class="label-checkbox">Ушки</label>
+														</div>
+														<div class="checkbox-wrap">
+															<input type="checkbox" class="checkbox" checked>
+															<label class="label-checkbox">Рюшки</label>
+														</div>
+														<div class="checkbox-wrap">
+															<input type="checkbox" class="checkbox" checked>
+															<label class="label-checkbox">Кант</label>
+														</div>
+													</div>
+													<div class="create-price-block">
+														<p class="price-label">Цена:</p>
+														<span>1500 p.</span>
+													</div>	
+												</form>
+											</li>
+											<li class="create-item">
+												<h2 class="info-title">Наволочка</h2>
+												<div class="img-wrap">
+													<img src="images/inst-1.jpg" alt="">
+												</div>
+												<form action="" class="create-form">												
+													<input type="text" class="create-input" placeholder="Kоличество">
+													 <select>
+														<option value="1" data-display="Размер">Размер</option>                    
+														<option value="2">200*200</option>
+														<option value="3">150*200</option>
+														<option value="4">100*200</option>                    
+													</select>
+													<p class="create-item-title">Дополнительно</p>
+													<div class="checkbox-blcok">
+														<div class="checkbox-wrap">
+															<input type="checkbox" class="checkbox" checked>
+															<label class="label-checkbox">Ушки</label>
+														</div>
+														<div class="checkbox-wrap">
+															<input type="checkbox" class="checkbox" checked>
+															<label class="label-checkbox">Рюшки</label>
+														</div>
+														<div class="checkbox-wrap">
+															<input type="checkbox" class="checkbox" checked>
+															<label class="label-checkbox">Кант</label>
+														</div>
+													</div>
+													<div class="create-price-block">
+														<p class="price-label">Цена:</p>
+														<span>1500 p.</span>
+													</div>	
+												</form>
+											</li>
+											<li class="create-item">
+												<h2 class="info-title">Простынь</h2>
+												<div class="img-wrap">
+													<img src="images/inst-3.jpg" alt="">
+												</div>
+												<form action="" class="create-form">												
+													<input type="text" class="create-input" placeholder="Kоличество">
+													 <select>
+														<option value="1" data-display="Размер">Размер</option>                    
+														<option value="2">200*200</option>
+														<option value="3">150*200</option>
+														<option value="4">100*200</option>                    
+													</select>
+													<p class="create-item-title">Дополнительно</p>
+													<div class="checkbox-blcok">
+														<div class="checkbox-wrap">
+															<input type="checkbox" class="checkbox" checked>
+															<label class="label-checkbox">Ушки</label>
+														</div>
+														<div class="checkbox-wrap">
+															<input type="checkbox" class="checkbox" checked>
+															<label class="label-checkbox">Рюшки</label>
+														</div>
+														<div class="checkbox-wrap">
+															<input type="checkbox" class="checkbox" checked>
+															<label class="label-checkbox">Кант</label>
+														</div>
+													</div>
+													<div class="create-price-block">
+														<p class="price-label">Цена:</p>
+														<span>1500 p.</span>
+													</div>	
 												</form>
 											</li>
 										</ul>
+									</div>
+									<div class="button-wrap">
+										<a href="" class="catalog-button">Оформить заказ</a>
 									</div>
 							</div>
 							<!-- #tab1 -->
@@ -239,6 +329,103 @@
       </div>
     </div> 
   </footer>
+
+		<!-- Modal -->
+	<div class="modal fade create-modal" id="myCreateModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="icon icon-menu-close"></i></button>					
+				</div>
+				<div class="modal-body">
+					<ul class="content-list">
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-1.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-2.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-3.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-3.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-2.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-1.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-3.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-2.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-1.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			
+			</div>
+		</div>
+	</div>
     <!-- build:js scripts/vendor.js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>   
     
