--- a/app/create.html
+++ b/app/create.html
@@ -143,7 +143,7 @@
 						</ul>
 						<div class="tab_container">
 							<h3 class="d_active tab_drawer_heading" rel="tab1">По своим размерам</h3>
-							<div id="tab1" class="tab_content">
+							<div id="tab1" class="tab_content tab_content-1">
 								<a href="" class="create-button" data-toggle="modal" data-target="#myCreateModal">Выберите модель белья</a>
 									<div class="create-wrap">
 										<ul class="create-list clearfix">
@@ -257,9 +257,179 @@
 							</div>
 							<!-- #tab1 -->
 							<h3 class="tab_drawer_heading" rel="tab2">Свой дизайн</h3>
-							<div id="tab2" class="tab_content">
-								<h2>Свой дизайн</h2>
-									<p>Nunc dui velit, scelerisque eu placerat volutpat, dapibus eu nisi. Vivamus eleifend vestibulum odio non vulputate.</p>
+							<div id="tab2" class="tab_content tab_content-2">
+								<div class="select-wrap">
+									<select>									 
+											<option value="1" data-display="Выберите ткань">Выберите ткань</option>                    
+											<option value="2">ткань1</option>
+											<option value="3">ткань2</option>
+											<option value="4">ткань3</option>                    
+										</select>
+								</div>		
+								<div class="create-wrap">
+									<ul class="create-list clearfix">
+										<li class="create-item">
+											<h2 class="info-title">Пододеяльник</h2>
+											<div class="img-wrap" data-toggle="modal" data-target="#myCreateModalOne">
+												<img src="images/inst-2.jpg" alt="">
+											</div>
+											<form action="" class="create-form">												
+												<input type="text" class="create-input" placeholder="Kоличество">
+													<select>
+													<option value="1" data-display="Размер">Размер</option>                    
+													<option value="2">200*200</option>
+													<option value="3">150*200</option>
+													<option value="4">100*200</option>                    
+												</select>
+												<p class="create-item-title">Дополнительно</p>
+												<div class="checkbox-blcok">
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Ушки</label>
+													</div>
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Рюшки</label>
+													</div>
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Кант</label>
+													</div>
+												</div>
+												<div class="create-price-block">
+													<p class="price-label">Цена:</p>
+													<span>1500 p.</span>
+												</div>	
+											</form>
+										</li>
+										<li class="create-item">
+											<h2 class="info-title">Наволочка</h2>
+											<div class="img-wrap" data-toggle="modal" data-target="#myCreateModalOne">
+												<img src="images/inst-1.jpg" alt="">
+											</div>
+											<form action="" class="create-form">												
+												<input type="text" class="create-input" placeholder="Kоличество">
+													<select>
+													<option value="1" data-display="Размер">Размер</option>                    
+													<option value="2">200*200</option>
+													<option value="3">150*200</option>
+													<option value="4">100*200</option>                    
+												</select>
+												<p class="create-item-title">Дополнительно</p>
+												<div class="checkbox-blcok">
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Ушки</label>
+													</div>
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Рюшки</label>
+													</div>
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Кант</label>
+													</div>
+												</div>
+												<div class="create-price-block">
+													<p class="price-label">Цена:</p>
+													<span>1500 p.</span>
+												</div>	
+											</form>
+										</li>
+										<li class="create-item">
+											<h2 class="info-title">Дополнительная наволочка</h2>
+											<div class="img-wrap" data-toggle="modal" data-target="#myCreateModalOne">
+												<img src="images/inst-3.jpg" alt="">
+											</div>
+											<form action="" class="create-form">												
+												<input type="text" class="create-input" placeholder="Kоличество">													
+													<select>
+														<option value="1" data-display="Размер">Размер</option>                    
+														<option value="2">200*200</option>
+														<option value="3">150*200</option>
+														<option value="4">100*200</option>                    
+													</select>												
+												<p class="create-item-title">Дополнительно</p>
+												<div class="checkbox-blcok">
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Ушки</label>
+													</div>
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Рюшки</label>
+													</div>
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Кант</label>
+													</div>
+												</div>
+												<div class="create-price-block">
+													<p class="price-label">Цена:</p>
+													<span>1500 p.</span>
+												</div>	
+											</form>
+										</li>
+										<li class="create-item">
+											<h2 class="info-title">Простынь</h2>
+											<div class="img-wrap" data-toggle="modal" data-target="#myCreateModalOne">
+												<img src="images/inst-3.jpg" alt="">
+											</div>
+											<form action="" class="create-form">												
+												<input type="text" class="create-input" placeholder="Kоличество">													
+													<select>
+														<option value="1" data-display="Размер">Размер</option>                    
+														<option value="2">200*200</option>
+														<option value="3">150*200</option>
+														<option value="4">100*200</option>                    
+													</select>												
+												<p class="create-item-title">Дополнительно</p>
+												<div class="checkbox-blcok">
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Ушки</label>
+													</div>
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Рюшки</label>
+													</div>
+													<div class="checkbox-wrap">
+														<input type="checkbox" class="checkbox" checked>
+														<label class="label-checkbox">Кант</label>
+													</div>
+												</div>
+												<div class="create-price-block">
+													<p class="price-label">Цена:</p>
+													<span>1500 p.</span>
+												</div>	
+											</form>
+										</li>
+										<li class="create-item">
+											<h2 class="info-title">Простынь на резинке</h2>
+											<div class="img-wrap" data-toggle="modal" data-target="#myCreateModalOne">
+												<img src="images/inst-3.jpg" alt="">
+											</div>
+											<form action="" class="create-form">												
+												<input type="text" class="create-input" placeholder="Kоличество">													
+													<select>
+														<option value="1" data-display="Размер">Размер</option>                    
+														<option value="2">200*200</option>
+														<option value="3">150*200</option>
+														<option value="4">100*200</option>                    
+													</select>												
+												<p class="create-item-title">Дополнительно</p>
+													<input type="text" class="create-input" placeholder="Произвольный размер">
+												<div class="create-price-block">
+													<p class="price-label">Цена:</p>
+													<span>1500 p.</span>
+												</div>	
+											</form>
+										</li>
+									</ul>
+								</div>
+								<div class="button-wrap">
+									<a href="" class="catalog-button">Оформить заказ</a>
+								</div>
 							</div>
 							<!-- #tab2 -->						
 						</div>
@@ -426,6 +596,86 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Modal One-->
+	<div class="modal fade create-modal" id="myCreateModalOne" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="icon icon-menu-close"></i></button>					
+				</div>
+				<div class="modal-body">
+					<ul class="content-list">
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-1.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+								<a href="" class="title-button">Применить ко всем</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-2.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+								<a href="" class="title-button">Применить ко всем</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-3.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+								<a href="" class="title-button">Применить ко всем</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-3.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+								<a href="" class="title-button">Применить ко всем</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-2.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+								<a href="" class="title-button">Применить ко всем</a>
+							</div>
+						</li>
+						<li class="content-item">
+							<div class="img-wrap">
+								<img src="images/inst-page-1.jpg" alt="">
+							</div>
+							<div class="description-block">
+								<p class="create-description">Постельное белье "Белоснежка"</p>
+								<a href="" class="title-button">Выбрать</a>
+								<a href="" class="title-button">Применить ко всем</a>
+							</div>
+						</li>					
+					</ul>
+				</div>
+			
+			</div>
+		</div>
+	</div>
+
+	
+
+
     <!-- build:js scripts/vendor.js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>   
     
