create-popup fix

--- a/app/create.html
+++ b/app/create.html
@@ -612,8 +612,10 @@
 							</div>
 							<div class="description-block">
 								<p class="create-description">Постельное белье "Белоснежка"</p>
-								<a href="" class="title-button">Выбрать</a>
-								<a href="" class="title-button">Применить ко всем</a>
+								<div class="button-wrap">
+									<a href="" class="title-button">Выбрать</a>
+									<a href="" class="title-button">Применить ко всем</a>
+								</div>
 							</div>
 						</li>
 						<li class="content-item">
@@ -622,8 +624,10 @@
 							</div>
 							<div class="description-block">
 								<p class="create-description">Постельное белье "Белоснежка"</p>
-								<a href="" class="title-button">Выбрать</a>
-								<a href="" class="title-button">Применить ко всем</a>
+								<div class="button-wrap">
+									<a href="" class="title-button">Выбрать</a>
+									<a href="" class="title-button">Применить ко всем</a>
+								</div>
 							</div>
 						</li>
 						<li class="content-item">
@@ -632,8 +636,10 @@
 							</div>
 							<div class="description-block">
 								<p class="create-description">Постельное белье "Белоснежка"</p>
-								<a href="" class="title-button">Выбрать</a>
-								<a href="" class="title-button">Применить ко всем</a>
+								<div class="button-wrap">
+									<a href="" class="title-button">Выбрать</a>
+									<a href="" class="title-button">Применить ко всем</a>
+								</div>
 							</div>
 						</li>
 						<li class="content-item">
@@ -642,8 +648,10 @@
 							</div>
 							<div class="description-block">
 								<p class="create-description">Постельное белье "Белоснежка"</p>
-								<a href="" class="title-button">Выбрать</a>
-								<a href="" class="title-button">Применить ко всем</a>
+								<div class="button-wrap">
+									<a href="" class="title-button">Выбрать</a>
+									<a href="" class="title-button">Применить ко всем</a>
+								</div>
 							</div>
 						</li>
 						<li class="content-item">
@@ -652,8 +660,10 @@
 							</div>
 							<div class="description-block">
 								<p class="create-description">Постельное белье "Белоснежка"</p>
-								<a href="" class="title-button">Выбрать</a>
-								<a href="" class="title-button">Применить ко всем</a>
+								<div class="button-wrap">
+									<a href="" class="title-button">Выбрать</a>
+									<a href="" class="title-button">Применить ко всем</a>
+								</div>
 							</div>
 						</li>
 						<li class="content-item">
@@ -662,8 +672,10 @@
 							</div>
 							<div class="description-block">
 								<p class="create-description">Постельное белье "Белоснежка"</p>
-								<a href="" class="title-button">Выбрать</a>
-								<a href="" class="title-button">Применить ко всем</a>
+								<div class="button-wrap">
+									<a href="" class="title-button">Выбрать</a>
+									<a href="" class="title-button">Применить ко всем</a>
+								</div>	
 							</div>
 						</li>					
 					</ul>
